templates/flarum/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flarum
  namespace: flarum
  labels:
    app: flarum
    component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flarum
      component: app
  template:
    metadata:
      labels:
        app: flarum
        component: app
    spec:
      containers:
      - name: flarum
        image: mondedie/docker-flarum:0.1.0-beta.7.1-stable
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8888
        volumeMounts:
        - name: assets
          mountPath: /flarum/app/assets
        - name: extensions
          mountPath: /flarum/app/extensions
      volumes:
      - name: assets
        hostPath:
          path: /mnt/flarum-assets
      - name: extensions
        hostPath:
          path: /mnt/flarum-extensions
