templates/flarum/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flarum
  namespace: flarum
  labels:
    app: flarum
    component: app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: flarum
    component: app
