templates/flarum/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flarum
  namespace: flarum
  labels:
    app: flarum
    component: app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: forum.play-net.org
    http:
      paths:
      - backend:
          serviceName: flarum
          servicePort: 80
  - host: dev-talk.io
    http:
      paths:
      - backend:
          serviceName: flarum
          servicePort: 80
  - host: dev-talk.net
    http:
      paths:
      - backend:
          serviceName: flarum
          servicePort: 80
